--- a/index.html
+++ b/index.html
@@ -1,11 +1,362 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>VOD Review</title>
-  </head>
-  <body>
-    <h1>VOD Review</h1>
-    <p>Download the latest version below.</p>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>VOD Review</title>
+
+  <style>
+    :root {
+      --gap: 5px;
+      --cols: 2;
+      --rows: 2;
+
+      --tileH: 300px;
+      --safe: 12px;
+
+      --bg: #0f0f0f;
+      --fg: #f1f1f1;
+      --panel: #141414;
+      --panel2: #1a1a1a;
+      --border: #333;
+
+      /* unified control sizing */
+      --controlH: 46px;
+      --controlInnerH: 32px;
+    }
+
+    * {
+      box-sizing: border-box;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, sans-serif;
+    }
+
+    body {
+      margin: 0;
+      background: var(--bg);
+      color: var(--fg);
+      overflow: hidden;
+    }
+
+    input, select, button {
+      background: #111;
+      color: #eee;
+      border: 1px solid var(--border);
+      border-radius: 10px;
+      font-size: 14px;
+    }
+
+    button { cursor: pointer; }
+
+    .meta {
+      font-size: 11px;
+      opacity: 0.75;
+    }
+
+    .app {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+
+    /* --- top controls --- */
+    .topbar {
+      display: flex;
+      gap: 10px;
+      padding: 10px;
+      align-items: center;
+      border-bottom: 1px solid var(--border);
+      background: var(--panel);
+      flex: 0 0 auto;
+    }
+
+    /* Make all topbar "things" same height */
+    .topbar button {
+      height: var(--controlH);
+      padding: 0 14px;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 12px;
+    }
+
+    .chip {
+      height: var(--controlH);
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      background: #1b1b1b;
+      border: 1px solid var(--border);
+      border-radius: 12px;
+      padding: 0 12px;
+    }
+
+    .chip label {
+      height: 100%;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      cursor: pointer;
+      user-select: none;
+      margin: 0;
+    }
+
+    .chip input[type="number"] {
+      height: var(--controlInnerH);
+      width: 72px;
+      padding: 0 8px;
+      border-radius: 10px;
+    }
+
+    .chip select {
+      height: var(--controlInnerH);
+      padding: 0 8px;
+      border-radius: 10px;
+    }
+
+    .chip input[type="checkbox"] {
+      width: 16px;
+      height: 16px;
+    }
+
+    .status {
+      margin-left: auto;
+      font-size: 12px;
+      opacity: 0.9;
+      display: inline-flex;
+      align-items: center;
+      gap: 10px;
+      white-space: nowrap;
+      height: var(--controlH);
+    }
+
+    .status.error { color: #ff6666; }
+
+    /* --- video list --- */
+    .setupPane {
+      padding: 12px 10px 6px 10px;
+      background: #0f0f0f;
+      flex: 0 0 auto;
+      overflow-x: auto;
+    }
+
+    .videoList {
+      display: flex;
+      flex-direction: column;
+      gap: 14px;
+      max-width: 1200px;
+    }
+
+    .videoBlock {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 8px;
+    }
+
+    .videoTitle {
+      font-size: 18px;
+      opacity: 0.95;
+      padding-left: 2px;
+    }
+
+    .videoRow {
+      display: grid;
+      grid-template-columns: 1fr auto 260px;
+      gap: 12px;
+      align-items: center;
+    }
+
+    .videoRow input[type="text"] {
+      width: 100%;
+      border-radius: 12px;
+      padding: 10px 12px;
+      background: #3a3a3a;
+      border: 1px solid #2a2a2a;
+      height: 46px;
+    }
+
+    .videoRow .browseBtn {
+      padding: 0 14px;
+      height: 46px;
+      border-radius: 12px;
+      background: #2a2a2a;
+    }
+
+    .videoRow .startTime {
+      width: 100%;
+      border-radius: 12px;
+      padding: 10px 12px;
+      background: #2a2a2a;
+      height: 46px;
+    }
+
+    .videoHint {
+      font-size: 12px;
+      opacity: 0.7;
+      margin-top: -4px;
+      padding-left: 2px;
+    }
+
+    /* --- grid --- */
+    .grid {
+      flex: 1 1 auto;
+      display: grid;
+      grid-template-columns: repeat(var(--cols), 1fr);
+      grid-template-rows: repeat(var(--rows), 1fr);
+      gap: var(--gap);
+      padding: var(--gap);
+      overflow: hidden;
+      min-height: 0;
+    }
+
+    .card {
+      background: black;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+
+    .playerWrap {
+      width: 100%;
+      height: 100%;
+      position: relative;
+    }
+
+    .r16x9 { aspect-ratio: 16 / 9; }
+    .r4x3  { aspect-ratio: 4 / 3; }
+
+    /* Zen mode */
+    body.zen .topbar,
+    body.zen .setupPane {
+      display: none;
+    }
+
+    .zenBar {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: rgba(0,0,0,0.85);
+      padding: 6px;
+      display: flex;
+      gap: 6px;
+      align-items: center;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.2s;
+    }
+
+    .zenBar.show {
+      opacity: 1;
+      pointer-events: auto;
+    }
+
+    .zenBar.autohideHidden {
+      opacity: 0;
+      pointer-events: none;
+    }
+
+    .zenHoverZone {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 50px;
+      display: none;
+    }
+
+    .zenHoverZone.active {
+      display: block;
+    }
+
+    input[type="range"] {
+      flex: 1;
+    }
+
+    /* small screens */
+    @media (max-width: 900px) {
+      .videoRow { grid-template-columns: 1fr auto 200px; }
+      .chip input[type="number"] { width: 62px; }
+    }
+  </style>
+</head>
+
+<body>
+  <div class="app">
+    <div class="topbar">
+      <!-- required order -->
+      <button id="loadBtn">Load</button>
+
+      <div class="chip">
+        <span class="meta">Rows:</span>
+        <input id="rows" type="number" min="1" value="2">
+      </div>
+
+      <div class="chip">
+        <span class="meta">Columns:</span>
+        <input id="cols" type="number" min="1" value="2">
+      </div>
+
+      <div class="chip">
+        <span class="meta">Aspect Ratio:</span>
+        <select id="ratio">
+          <option value="r16x9">16:9</option>
+          <option value="r4x3">4:3</option>
+        </select>
+      </div>
+
+      <div class="chip">
+        <label>
+          <input type="checkbox" id="autoHideToggle" checked>
+          Autohide Controls
+        </label>
+      </div>
+
+      <div class="chip">
+        <span class="meta">Drift</span>
+        <input id="threshold" type="number" step="0.05" value="0.25" title="Auto-correct drift threshold (seconds)">
+      </div>
+
+      <button id="checkUpdateBtn">Check for Updates</button>
+
+      <!-- status area (top bar stripped down) -->
+      <span class="status">
+        <span id="appVersion" class="meta"></span>
+        <span id="status"></span>
+      </span>
+    </div>
+
+    <div class="setupPane">
+      <div id="videoList" class="videoList"></div>
+      <div class="videoHint">Paste a YouTube link/ID or use Browse. A new video row appears automatically once you fill one.</div>
+    </div>
+
+    <div class="grid" id="grid"></div>
+  </div>
+
+  <div id="zenHoverZone" class="zenHoverZone"></div>
+
+  <div id="zenBar" class="zenBar">
+    <button id="zRew30">-30s</button>
+    <button id="zRew5">-5s</button>
+    <button id="zPlayPause">Play</button>
+    <button id="zFwd5">+5s</button>
+    <button id="zFwd30">+30s</button>
+
+    <span id="zenTime">00:00:00 / 00:00:00</span>
+    <input id="zenSeek" type="range" min="0" max="1000" value="0">
+
+    <select id="zSpeed">
+      <option value="0.25">0.25×</option>
+      <option value="0.5">0.5×</option>
+      <option value="1" selected>1×</option>
+      <option value="1.25">1.25×</option>
+      <option value="1.5">1.5×</option>
+      <option value="2">2×</option>
+    </select>
+
+    <button id="zSync">Sync</button>
+    <button id="zSettings">⚙</button>
+  </div>
+
+  <script src="https://www.youtube.com/iframe_api"></script>
+  <script src="./renderer.js"></script>
+</body>
 </html>
