--- a/index.html
+++ b/index.html
@@ -270,6 +270,80 @@
       flex: 1;
     }
 
+    /* --- Keybinds modal (Discord-like window) --- */
+    .modalBackdrop {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.55);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+    }
+
+    .modalBackdrop.open {
+      display: flex;
+    }
+
+    .modalPanel {
+      position: relative;
+      background: #0b0b0b;
+      border: 1px solid #222;
+      border-radius: 18px;
+      padding: 22px 24px;
+      min-width: 320px;
+    }
+
+    .modalClose {
+      position: absolute;
+      top: 14px;
+      right: 14px;
+      width: 40px;
+      height: 40px;
+      border-radius: 12px;
+      background: transparent;
+      border: none;
+      color: #fff;
+      font-size: 28px;
+      line-height: 1;
+    }
+
+    .kbGrid {
+      display: grid;
+      gap: 16px;
+      padding-top: 10px;
+    }
+
+    .kbRow {
+      display: grid;
+      grid-template-columns: 90px 140px;
+      gap: 18px;
+      align-items: center;
+    }
+
+    .kbKey, .kbAction {
+      background: #2c2c2c;
+      border: 1px solid #1f1f1f;
+      border-radius: 12px;
+      height: 64px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+    }
+
+    .kbKey {
+      font-size: 28px;
+      font-weight: 700;
+    }
+
+    .kbAction {
+      font-size: 24px;
+      font-weight: 500;
+      text-align: center;
+      line-height: 1.05;
+    }
+
     /* small screens */
     @media (max-width: 900px) {
       .videoRow { grid-template-columns: 1fr auto 200px; }
@@ -314,6 +388,7 @@
         <input id="threshold" type="number" step="0.05" value="0.25" title="Auto-correct drift threshold (seconds)">
       </div>
 
+      <button id="keybindsBtn">Keybinds</button>
       <button id="checkUpdateBtn">Check for Updates</button>
 
       <!-- status area (top bar stripped down) -->
@@ -357,6 +432,22 @@
   </div>
 
   <script src="https://www.youtube.com/iframe_api"></script>
+
+  <!-- Keybinds modal -->
+  <div id="keybindsModal" class="modalBackdrop">
+    <div class="modalPanel">
+      <button id="keybindsClose" class="modalClose" aria-label="Close">×</button>
+
+      <div class="kbGrid">
+        <div class="kbRow"><div class="kbKey">G</div><div class="kbAction">-30s</div></div>
+        <div class="kbRow"><div class="kbKey">H</div><div class="kbAction">-5s</div></div>
+        <div class="kbRow"><div class="kbKey">J</div><div class="kbAction">Pause /<br>Play</div></div>
+        <div class="kbRow"><div class="kbKey">K</div><div class="kbAction">+5s</div></div>
+        <div class="kbRow"><div class="kbKey">L</div><div class="kbAction">+30s</div></div>
+      </div>
+    </div>
+  </div>
+
   <script src="./renderer.js"></script>
 </body>
 </html>
