--- a/index.html
+++ b/index.html
@@ -269,6 +269,37 @@
     input[type="range"] {
       flex: 1;
     }
+        .zenSeekWrap {
+      position: relative;
+      flex: 1;
+      display: flex;
+      align-items: center;
+      min-width: 120px;
+    }
+
+    .zenSeekWrap input[type="range"] {
+      flex: 1;
+    }
+
+    .zenHoverTime {
+      position: absolute;
+      bottom: calc(100% + 6px);
+      left: 0;
+      transform: translateX(-50%);
+      background: rgba(0, 0, 0, 0.85);
+      border: 1px solid rgba(255, 255, 255, 0.12);
+      padding: 2px 8px;
+      border-radius: 10px;
+      font-size: 12px;
+      line-height: 1.2;
+      white-space: nowrap;
+      pointer-events: none;
+      opacity: 0;
+    }
+
+    .zenHoverTime.show {
+      opacity: 1;
+    }
 
     /* --- Keybinds modal (Discord-like window) --- */
     .modalBackdrop {
@@ -440,16 +471,21 @@
     <button id="zFwd30">+30s</button>
 
     <span id="zenTime">00:00:00 / 00:00:00</span>
-    <input id="zenSeek" type="range" min="0" max="1000" value="0">
 
-    <select id="zSpeed">
-      <option value="0.25">0.25×</option>
-      <option value="0.5">0.5×</option>
-      <option value="1" selected>1×</option>
-      <option value="1.25">1.25×</option>
-      <option value="1.5">1.5×</option>
-      <option value="2">2×</option>
-    </select>
+    <div id="zenSeekWrap" class="zenSeekWrap">
+  <div id="zenHoverTime" class="zenHoverTime"></div>
+  <input id="zenSeek" type="range" min="0" max="1000" value="0">
+</div>
+
+<select id="zSpeed">
+  <option value="0.25">0.25×</option>
+  <option value="0.5">0.5×</option>
+  <option value="1" selected>1×</option>
+  <option value="1.25">1.25×</option>
+  <option value="1.5">1.5×</option>
+  <option value="2">2×</option>
+</select>
+
 
     <button id="zSync">Sync</button>
     <button id="zSettings">⚙</button>
