--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
     .videoRow {
       display: grid;
-      grid-template-columns: 1fr auto 260px;
+      grid-template-columns: 1fr auto 160px 200px;
       gap: 12px;
       align-items: center;
     }
@@ -212,6 +212,85 @@
       height: 46px;
     }
 
+    .videoRow .videoNameInput {
+      width: 100%;
+      border-radius: 12px;
+      padding: 10px 12px;
+      background: #2a2a2a;
+      height: 46px;
+    }
+
+    .videoHeader {
+      background: #1a1a1a;
+      padding: 0 10px;
+      height: 32px;
+      font-size: 14px;
+      font-weight: 500;
+      border-bottom: 1px solid var(--border);
+      color: #ddd;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 10px;
+    }
+
+    .videoNameText {
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      flex: 1;
+    }
+
+    .volControl {
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      width: 120px;
+      /* Increased to fit icon */
+      margin-left: auto;
+    }
+
+    .volIcon {
+      width: 16px;
+      height: 16px;
+      fill: #bbb;
+      flex-shrink: 0;
+      cursor: pointer;
+    }
+
+    .volSlider {
+      -webkit-appearance: none;
+      width: 100%;
+      height: 4px;
+      background: #444;
+      border-radius: 2px;
+      outline: none;
+    }
+
+    .volSlider::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 12px;
+      height: 12px;
+      background: #eee;
+      border-radius: 50%;
+      cursor: pointer;
+    }
+
+    .volSlider::-moz-range-thumb {
+      width: 12px;
+      height: 12px;
+      background: #eee;
+      border-radius: 50%;
+      cursor: pointer;
+      border: none;
+    }
+
+    .volSlider:disabled {
+      opacity: 0.3;
+      cursor: not-allowed;
+    }
+
     .videoHint {
       font-size: 12px;
       opacity: 0.7;
@@ -238,11 +317,7 @@
       overflow: hidden;
     }
 
-    .playerWrap {
-      width: 100%;
-      height: 100%;
-      position: relative;
-    }
+    /* .playerWrap redefined below */
 
     /* Mute selection mode - show red border and enable clicking */
     body.muteSelectMode .grid {
@@ -271,6 +346,15 @@
       border-radius: 10px;
       overflow: hidden;
       position: relative;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .playerWrap {
+      width: 100%;
+      flex: 1;
+      position: relative;
+      min-height: 0;
     }
 
     .r16x9 {
@@ -485,7 +569,7 @@
     /* small screens */
     @media (max-width: 900px) {
       .videoRow {
-        grid-template-columns: 1fr auto 200px;
+        grid-template-columns: 1fr auto 130px 140px;
       }
 
       .chip input[type="number"] {
