--- a/index.html
+++ b/index.html
@@ -732,7 +732,8 @@
 
     <div class="setupPane">
       <div id="videoList" class="videoList"></div>
-      <div class="videoHint">Paste a YouTube link/ID or use Browse. A new video row appears automatically once you fill
+      <div class="videoHint">Paste a YouTube, Twitch VOD link/ID, or use Browse. A new video row appears automatically
+        once you fill
         one up to six videos.</div>
     </div>
 
@@ -767,6 +768,7 @@
     <button id="zSettings">⚙</button>
   </div>
 
+  <script src="https://player.twitch.tv/js/embed/v1.js"></script>
   <script src="https://www.youtube.com/iframe_api"></script>
 
   <!-- Keybinds modal -->
