--- a/index.html
+++ b/index.html
@@ -431,6 +431,12 @@
       outline-offset: -3px;
     }
 
+    /* ALLOW interaction when mouse tool is active */
+    body.drawMode.drawMouseActive .card video,
+    body.drawMode.drawMouseActive .card iframe {
+      pointer-events: auto !important;
+    }
+
     /* Focus layout - main video + bottom strip using CSS Grid */
     body.focusLayout .grid {
       display: grid !important;
@@ -728,8 +734,8 @@
 
 
       <button id="keybindsBtn">Keybinds</button>
-      <button id="checkUpdateBtn">Check for Updates</button>
       <button id="feedbackBtn">Improve This App</button>
+      <button id="checkUpdateBtn">Check for Updates</button>
 
       <!-- status area (top bar stripped down) -->
       <span class="status">
